--- a/README
+++ b/README
@@ -8,4 +8,4 @@ Out[2]: 2
 In [3]: syscalls.linux(2)
 Out[3]: 'fork'
 
-Currently supports freebsd, linux, netbsd, openbsd and osx
+Currently supports freebsd, linux, netbsd, openbsd and osx.
